<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:scrollbars="horizontal|vertical"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/layer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layer_name"
                    android:visibility="gone"
                    style="@style/CaptionText"
                    android:gravity="right"/>

                <EditText
                    android:id="@+id/layer_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layer_name"
                    android:layout_weight="1"
                    style="@style/DefaultText" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/layer_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/layer_type"
                        style="@style/CaptionText"
                        android:gravity="right"/>

                    <Spinner
                        android:id="@+id/layer_type_edit"
                        style="@style/ProfileSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        tools:listitem="@layout/item_spinner"
                        tools:text="type"/>
                </LinearLayout>

            </LinearLayout>
            <!-- 1-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/move_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/move_up"
                        style="@style/SpinnerText"
                        android:padding="12dp"
                        android:gravity="right"/>

                    <TextView
                        android:id="@+id/move_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/move_down"
                        style="@style/SpinnerText"
                        android:padding="12dp"
                        android:gravity="right"/>

            </LinearLayout>
            <!-- 2-->
            <ImageButton
                android:id="@+id/button_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="6dp"
                android:background="@null"
                android:src="@drawable/icon_apply_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/layer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layer_location"
                style="@style/CaptionText"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/location_type_edit"
                style="@style/ProfileSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:visibility="gone"
                tools:listitem="@layout/item_spinner"/>

            <EditText
                android:id="@+id/layer_location_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layer_location"
                android:layout_weight="3"
                style="@style/DefaultText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/layer_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layer_zoom"
                style="@style/CaptionText"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/zoom_type_edit"
                style="@style/ProfileSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                style="@style/CaptionText"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/zoom_min_edit"
                style="@style/ProfileSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_spinner"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                style="@style/CaptionText"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/zoom_max_edit"
                style="@style/ProfileSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_spinner"/>


        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:visibility="gone">-->
            <!--<TextView-->
                <!--android:id="@+id/layer_range"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/layer_range"-->
                <!--style="@style/CaptionText"-->
                <!--android:gravity="right"/>-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/from"-->
                <!--style="@style/CaptionText"-->
                <!--android:gravity="right"/>-->

            <!--<EditText-->
                <!--android:id="@+id/layer_range_min"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/layer_range"-->
                <!--android:inputType="number"-->
                <!--style="@style/DefaultText" />-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/to"-->
                <!--style="@style/CaptionText"-->
                <!--android:gravity="right"/>-->
            <!--<EditText-->
                <!--android:id="@+id/layer_range_max"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/layer_range"-->
                <!--android:inputType="number"-->
                <!--style="@style/DefaultText" />-->
        <!--</LinearLayout>-->
    </LinearLayout>
</ScrollView>
